@@ -6092,16 +6092,6 @@ Deprecated in favor of the software scaler.
 Clamps YUV color values to the CCIR 601 range without doing real conversion.
 .
 .TP
-.B rgb2bgr[=swap]
-RGB 24/32 <\-> BGR 24/32 colorspace conversion.
-.PD 0
-.RSs
-.IPs "swap\ "
-Also perform  R <\-> B swapping.
-.RE
-.PD 1
-.
-.TP
 .B palette
 RGB/BGR 8 \-> 15/16/24/32bpp colorspace conversion using palette.
 .
