@@ -30,6 +30,7 @@ MPlayer (1.0)
 
     Filters:
     * remove vf_yuy2, functionality is replaced by -vf format=yuv2
+    * remove vf_rgb2bgr, functionality is replaced by sws and vf_format
 
     Drivers:
     * -vo yuv4mpeg:interlaced no longer does its own interlaced RGB->YUV
